# consulta_etiquetas

./: README.md
etiquetas/: pyproject.toml
etiquetas/data/: dataBase.db
etiquetas/etiquetas/: consulta_etiqueta.py  data.py  tela_inicial.py
etiquetas/tests/: test_etiquetas.py
