[tool.poetry]
name = "etiquetas"
version = "0.1.0"
description = ""
authors = ["LuizEduardo-service <luizeduardo.service@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
tk-tools = "^0.16.0"
db-sqlite3 = "^0.0.1"
selenium = "^4.3.0"
webdriver-manager = "^3.8.0"
easygui = "^0.98.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
